<resources>
    <string name="app_name">GardenLabs</string>
    <string name="txt_password">Introduza a password</string>
    <string name="txt_email">Introduza email</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_welcome">Bem-vindo</string>
    <string name="txt_btnEmail">Enviar email</string>
    <string name="txt_email_inval">Formato de email inválido</string>
    <string name="txt_ncaracteres_insuf">Número de caracteres insuficiente</string>
    <string name="txt_title">Título: </string>
    <string name="ndOpen">ndOpem</string>
    <string name="ndClose">ndClose\n</string>
    <string name="txt_username">Introduza username</string>
    <string name="link_register">Don\'t have an account? Register here</string>
    <string name="txt_btn_register">Register</string>
    <string name="link_login">Already have an account? Login here</string>
    <string name="txt_username_inval">Username inválido!</string>
    <string name="reset_password">Forgot your password? Reset it here!</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="backtologin">Go back to Login</string>
    <string name="txt_old_password">Introduza a password atual</string>
    <string name="txt_confirmar_password">Confirmar Password</string>
    <string name="txt_new_password">Introduza a nova password</string>
    <string name="txt_n_correspondem">Não correspondem!</string>
    <string name="nav_services">Serviços</string>
    <string name="navCarrinho">Carrinho</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navWishlist">Wishlist</string>
    <string name="navAccount">Conta</string>
    <string name="navLogout">Logout</string>
    <string name="navShopping">Shopping</string>
    <string name="navAccountHeader">Account</string>
    <string name="navHome">Home</string>
    <string name="navPurchaseHistory">Histórico de compras</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_morada">Morada</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="lbl_nif">NIF</string>
    <string name="lbl_metodo_de_pagamento">Método de pagamento</string>
    <string name="txt_confirm_purchase">Confirm Purchase</string>
    <string name="lbl_items_do_carrinho">Items do carrinho</string>
    <string name="lbl_detalhes_do_destinatario">Detalhes do destinatário</string>
    <string name="lbl_descricao">Descricao</string>
    <string name="lbl_duracao">Duração</string>
    <string name="lbl_preco">Preço</string>
    <string name="lbl_prestador">Prestador</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="txt_form_error_field_empty">Campo de preenchimento obrigatório!</string>
</resources>